parser.c
#include <stdio.h>

#include <stdint.h>
#include <stdbool.h>
#include "parser.h"
#include "lexer.h"
#include "list.h"

#define STARTING_NODE_CAPACITY 1000

#define STARTING_PARSER_ERROR_CAPACITY 100

// The state passed between parsing functions.
typedef struct Parser {
	Token *tokens;
	Node *nodes;
	Parser_Error *errors;
	uint32_t current_token_index;
	uint32_t current_node_index;
	bool current_node_is_parent;
} Parser;

static uint32_t prefix_precedences[TOKEN_TYPE_COUNT] = {
	[TOKEN_TYPE_LEFT_PARENTHESIS] = 1601,
	[TOKEN_TYPE_LEFT_BRACKET] = 1602,
	
	[TOKEN_TYPE_PLUS] = 1600,
	[TOKEN_TYPE_MINUS] = 1600,
	[TOKEN_TYPE_TIMES] = 1600,
	[TOKEN_TYPE_BITWISE_NOT] = 1600,

	[TOKEN_TYPE_BOOLEAN_NOT] = 600,
};

static uint32_t infix_precedences[TOKEN_TYPE_COUNT] = {
	[TOKEN_TYPE_DOT] = 1800,
	[TOKEN_TYPE_ARROW] = 1800,
	
	[TOKEN_TYPE_AS] = 1750,

	[TOKEN_TYPE_LEFT_ANGLE_BRACKET] = 1701,
	[TOKEN_TYPE_LEFT_BRACKET] = 1702,
	[TOKEN_TYPE_LEFT_PARENTHESIS] = 1703,

	// unary operators

	[TOKEN_TYPE_MODULUS] = 1400,
	[TOKEN_TYPE_DIVIDE] = 1400,
	[TOKEN_TYPE_TIMES] = 1400,

	[TOKEN_TYPE_MINUS] = 1300,
	[TOKEN_TYPE_PLUS] = 1300,
	
	[TOKEN_TYPE_LEFT_SHIFT] = 1200,

	[TOKEN_TYPE_RIGHT_SHIFT] = 1100,

	[TOKEN_TYPE_BITWISE_AND] = 1000,

	[TOKEN_TYPE_BITWISE_XOR] = 900,

	[TOKEN_TYPE_BITWISE_OR] = 800,

	[TOKEN_TYPE_IS] = 700,
	[TOKEN_TYPE_LESS_EQUAL] = 700,
	[TOKEN_TYPE_LESS] = 700,
	[TOKEN_TYPE_GREATER_EQUAL] = 700,
	[TOKEN_TYPE_GREATER] = 700,
	[TOKEN_TYPE_NOT_EQUAL] = 700,
	[TOKEN_TYPE_EQUAL] = 700,
		
	[TOKEN_TYPE_BOOLEAN_AND] = 500,
	
	[TOKEN_TYPE_BOOLEAN_XOR] = 400,
	
	[TOKEN_TYPE_BOOLEAN_OR] = 300,
	
	[TOKEN_TYPE_COMMA] = 200,
	
	[TOKEN_TYPE_MODULUS_ASSIGN] = 100,
	[TOKEN_TYPE_RIGHT_SHIFT_ASSIGN] = 100,
	[TOKEN_TYPE_LEFT_SHIFT_ASSIGN] = 100,
	[TOKEN_TYPE_BITWISE_NOT_ASSIGN] = 100,
	[TOKEN_TYPE_BITWISE_XOR_ASSIGN] = 100,
	[TOKEN_TYPE_BITWISE_OR_ASSIGN] = 100,
	[TOKEN_TYPE_BITWISE_AND_ASSIGN] = 100,
	[TOKEN_TYPE_DIVIDE_ASSIGN] = 100,
	[TOKEN_TYPE_TIMES_ASSIGN] = 100,
	[TOKEN_TYPE_MINUS_ASSIGN] = 100,
	[TOKEN_TYPE_PLUS_ASSIGN] = 100,
	[TOKEN_TYPE_ASSIGN] = 100,
};

static Token *current_token(Parser *parser) {
	if (parser->current_token_index >= list_get_size(parser->tokens)) {
		return NULL;
	}
	return parser->tokens + parser->current_token_index;
}

static Node *current_node(Parser *parser) {
	return parser->nodes + parser->current_node_index;
}

static uint32_t last_node_index(Parser *parser) {
	return list_get_size(parser->nodes) - 1;
}

// Appends a node to the list of nodes without modifying the current parent index.
static Node *add_node(Parser *parser, Node_Type type) {
	Node new_node = {
		.type = type,
	};
	// TODO: Handle null return value.
	parser->nodes = list_push(parser->nodes, &new_node);
	if (parser->current_node_is_parent) {
		current_node(parser)->child_index = last_node_index(parser);
		list_get_last(parser->nodes)->parent_index = parser->current_node_index;
		parser->current_node_is_parent = false;
	} else {
		current_node(parser)->next_index = last_node_index(parser);
		list_get_last(parser->nodes)->parent_index = current_node(parser)->parent_index;
	}
	parser->current_node_index = last_node_index(parser);
	return list_get_last(parser->nodes);
}

static void begin_node(Parser *parser, Node_Type type) {
	add_node(parser, type);
	parser->current_node_is_parent = true;
}

static bool end_node(Parser *parser) {
	parser->current_node_index = current_node(parser)->parent_index;
	return true;
}

static bool emit_error(Parser *parser, Parser_Error_Type type) {
	// TODO: Count error tokens.
	Parser_Error error = {
		.type = type,
		.token_index = parser->current_token_index,
		.token_count = 0,
	};
	// TODO: Handle null return value.
	parser->errors = list_push(parser->errors, &error);
	return false;
}

static bool peek_token(Parser *parser, Token_Type type) {
	Token *token = current_token(parser);
	return token && token->type == type;
}

static bool parse_token(Parser *parser, Token_Type type) {
	if (!peek_token(parser, type)) {
		return false;
	}
	Node *new_node = add_node(parser, NODE_TYPE_TOKEN);
	new_node->child_index = parser->current_token_index;
	++parser->current_token_index;
	return true;
}

static uint32_t peek_prefix_operator(Parser *parser) {
	Token *token = current_token(parser);
	if (token) {
		return prefix_precedences[token->type];
	}
	return 0;
}

static uint32_t parse_prefix_operator(Parser *parser) {
	uint32_t precedence = peek_prefix_operator(parser);
	if (precedence) {
		parse_token(parser, current_token(parser)->type);
		return precedence;
	}
	return 0;
}

static uint32_t peek_infix_operator(Parser *parser) {
	Token *token = current_token(parser);
	if (token) {
		return infix_precedences[token->type];
	}
	return 0;
}

static uint32_t parse_infix_operator(Parser *parser) {
	uint32_t precedence = peek_infix_operator(parser);
	if (precedence) {
		parse_token(parser, current_token(parser)->type);
		return precedence;
	}
	return 0;
}

static bool parse_expression(Parser *parser);

static bool parse_function_arguments(Parser *parser) {
	if (!peek_token(parser, TOKEN_TYPE_LEFT_PARENTHESIS)) return false;
	begin_node(parser, NODE_TYPE_FUNCTION_ARGUMENTS);
		parse_token(parser, TOKEN_TYPE_LEFT_PARENTHESIS);
		while (!peek_token(parser, TOKEN_TYPE_RIGHT_PARENTHESIS)) {
			if (!parse_expression(parser)) return false;
			if (!parse_token(parser, TOKEN_TYPE_COMMA)) break;
		}
		if (!parse_token(parser, TOKEN_TYPE_RIGHT_PARENTHESIS)) return emit_error(parser, PARSER_ERROR_TYPE_UNCLOSED_PARENTHESIS);
	return end_node(parser);
}

static bool parse_array_index(Parser *parser) {
	begin_node(parser, NODE_TYPE_ARRAY_INDEX);
	if (!parse_token(parser, TOKEN_TYPE_LEFT_BRACKET)) return false;
	if (!parse_expression(parser)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_EXPRESSION);
	if (!parse_token(parser, TOKEN_TYPE_RIGHT_BRACKET)) return emit_error(parser, PARSER_ERROR_TYPE_UNCLOSED_BRACKET);
	return end_node(parser);
}

static bool parse_array(Parser *parser) {
	begin_node(parser, NODE_TYPE_ARRAY);
	if (!parse_token(parser, TOKEN_TYPE_LEFT_BRACKET)) return false;
	while (parse_expression(parser)) {
		if (!parse_token(parser, TOKEN_TYPE_COMMA)) break;
	}
	if (!parse_token(parser, TOKEN_TYPE_RIGHT_BRACKET)) return emit_error(parser, PARSER_ERROR_TYPE_UNCLOSED_BRACKET);
	return end_node(parser);
}

static bool parse_basic_expression(Parser *parser) {
	return parse_token(parser, TOKEN_TYPE_NUMBER) || parse_token(parser, TOKEN_TYPE_IDENTIFIER);
}

static bool parse_infix_expression(Parser *parser, uint32_t precedence);

static bool parse_prefix_expression(Parser *parser) {
	uint32_t precedence = peek_prefix_operator(parser);
	if (!precedence) {
		return parse_basic_expression(parser);
	}
	if (precedence == prefix_precedences[TOKEN_TYPE_LEFT_PARENTHESIS]) {
		return parse_function_arguments(parser);
	}
	if (precedence == prefix_precedences[TOKEN_TYPE_LEFT_BRACKET]) {
		return parse_array(parser);
	}

	begin_node(parser, NODE_TYPE_PREFIX_EXPRESSION);
		parse_prefix_operator(parser);
		if (!parse_infix_expression(parser, precedence)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_EXPRESSION);
	return end_node(parser);
}

static bool parse_type(Parser *parser);

static bool parse_infix_expression(Parser *parser, uint32_t precedence) {
	begin_node(parser, NODE_TYPE_INFIX_EXPRESSION);
	if (!parse_prefix_expression(parser)) return false;
	uint32_t new_precedence = 0;
	while ((new_precedence = peek_infix_operator(parser)) > precedence) {
		parse_infix_operator(parser);
		if (new_precedence == infix_precedences[TOKEN_TYPE_LEFT_PARENTHESIS]) {
			--parser->current_token_index;
			if (!parse_function_arguments(parser)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_FUNCTION_ARGUMENTS);
		} else if (new_precedence == infix_precedences[TOKEN_TYPE_LEFT_BRACKET]) {
			--parser->current_token_index;
			if (!parse_array_index(parser)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_ARRAY_INDEX);
		} else if (new_precedence == infix_precedences[TOKEN_TYPE_AS]) {
			if (!parse_type(parser)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_TYPE);
		} else if (!parse_infix_expression(parser, new_precedence)) {
			return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_EXPRESSION);
		}
	}
	// TODO: Maybe tidy up tree by removing unnecessary parent node if it only has one child.
	return end_node(parser);
}

static bool parse_expression(Parser *parser) {
	return parse_infix_expression(parser, 0);
}

static bool parse_assignment_body(Parser *parser) {
	if (!parse_token(parser, TOKEN_TYPE_ASSIGN)) return false;
	if (!parse_expression(parser)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_EXPRESSION);
	return true;
}

static bool parse_type(Parser *parser);

static bool parse_generic_arguments(Parser *parser) {
	begin_node(parser, NODE_TYPE_GENERIC_ARGUMENTS);
		parse_token(parser, TOKEN_TYPE_LEFT_ANGLE_BRACKET);
		while (!peek_token(parser, TOKEN_TYPE_GREATER)) {
			if (!parse_type(parser)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_TYPE);
			parse_token(parser, TOKEN_TYPE_COMMA);
		}
		if (!parse_token(parser, TOKEN_TYPE_GREATER)) return emit_error(parser, PARSER_ERROR_TYPE_UNCLOSED_ANGLE_BRACKET);
	return end_node(parser);
}

static bool parse_basic_type(Parser *parser) {
	begin_node(parser, NODE_TYPE_BASIC_TYPE);
		parse_token(parser, TOKEN_TYPE_IDENTIFIER);
		while (true) {
			if (parse_token(parser, TOKEN_TYPE_DOT)) {
				if (!parse_token(parser, TOKEN_TYPE_IDENTIFIER)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_IDENTIFIER);
			} else if (peek_token(parser, TOKEN_TYPE_LEFT_ANGLE_BRACKET)) {
				if (!parse_generic_arguments(parser)) return false;
			} else {
				break;
			}
		}
	return end_node(parser);
}

static bool parse_mut_type(Parser *parser) {
	begin_node(parser, NODE_TYPE_MUT_TYPE);
		parse_token(parser, TOKEN_TYPE_MUT);
		if (!parse_type(parser)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_TYPE);
	return end_node(parser);
}

static bool parse_weak_type(Parser *parser) {
	begin_node(parser, NODE_TYPE_WEAK_TYPE);
		parse_token(parser, TOKEN_TYPE_WEAK);
		if (!parse_type(parser)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_TYPE);
	return end_node(parser);
}

static bool parse_owned_type(Parser *parser) {
	begin_node(parser, NODE_TYPE_OWNED_TYPE);
		parse_token(parser, TOKEN_TYPE_OWNED);
		if (!parse_type(parser)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_TYPE);
	return end_node(parser);
}

static bool parse_tuple_type(Parser *parser) {
	begin_node(parser, NODE_TYPE_TUPLE_TYPE);
		parse_token(parser, TOKEN_TYPE_LEFT_PARENTHESIS);
		// TODO: Fix this so it correctly distinguishes invalid types and unclosed parenthesis.
		while (!peek_token(parser, TOKEN_TYPE_RIGHT_PARENTHESIS)) {
			if (!parse_type(parser)) break;
			parse_token(parser, TOKEN_TYPE_COMMA);
		}
		if (!parse_token(parser, TOKEN_TYPE_RIGHT_PARENTHESIS)) return emit_error(parser, PARSER_ERROR_TYPE_UNCLOSED_PARENTHESIS);
	return end_node(parser);
}

static bool parse_function_type(Parser *parser) {
	begin_node(parser, NODE_TYPE_FUNCTION_TYPE);
		parse_token(parser, TOKEN_TYPE_FUNC);
		if (!parse_tuple_type(parser)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_FUNCTION_PARAMETERS);
		if (!parse_type(parser)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_TYPE);
	return end_node(parser);
}

static bool parse_array_type(Parser *parser) {
	begin_node(parser, NODE_TYPE_ARRAY_TYPE);
		parse_token(parser, TOKEN_TYPE_LEFT_BRACKET);
		if (!peek_token(parser, TOKEN_TYPE_RIGHT_BRACKET) && !parse_expression(parser)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_EXPRESSION);
		if (!parse_token(parser, TOKEN_TYPE_RIGHT_BRACKET)) return emit_error(parser, PARSER_ERROR_TYPE_UNCLOSED_BRACKET);
		if (!parse_type(parser)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_TYPE);
	return end_node(parser);
}

static bool parse_pointer_type(Parser *parser) {
	begin_node(parser, NODE_TYPE_POINTER_TYPE);
		parse_token(parser, TOKEN_TYPE_BITWISE_AND);
		if (!parse_type(parser)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_TYPE);
	return end_node(parser);
}

static bool parse_type(Parser *parser) {
	if (peek_token(parser, TOKEN_TYPE_BITWISE_AND)) return parse_pointer_type(parser);
	if (peek_token(parser, TOKEN_TYPE_LEFT_BRACKET)) return parse_array_type(parser);
	if (peek_token(parser, TOKEN_TYPE_LEFT_PARENTHESIS)) return parse_tuple_type(parser);
	if (peek_token(parser, TOKEN_TYPE_FUNC)) return parse_function_type(parser);
	if (peek_token(parser, TOKEN_TYPE_OWNED)) return parse_owned_type(parser);
	if (peek_token(parser, TOKEN_TYPE_WEAK)) return parse_weak_type(parser);
	if (peek_token(parser, TOKEN_TYPE_MUT)) return parse_mut_type(parser);
	if (peek_token(parser, TOKEN_TYPE_IDENTIFIER)) return parse_basic_type(parser);
	return false;
}

static bool parse_embed_statement(Parser *parser) {
	begin_node(parser, NODE_TYPE_EMBED_STATEMENT);
		parse_token(parser, TOKEN_TYPE_EMBED);
		if (!parse_type(parser)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_TYPE);
		if (!parse_token(parser, TOKEN_TYPE_SEMICOLON)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_SEMICOLON);
	return end_node(parser);
}

static bool parse_struct_definition(Parser *parser);

static bool parse_trait_definition(Parser *parser);

static bool parse_type_case(Parser *parser) {
	if (peek_token(parser, TOKEN_TYPE_EMBED)) return parse_embed_statement(parser);
	if (peek_token(parser, TOKEN_TYPE_STRUCT)) return parse_struct_definition(parser);
	if (peek_token(parser, TOKEN_TYPE_TRAIT)) return parse_trait_definition(parser);
	if (!peek_token(parser, TOKEN_TYPE_IDENTIFIER)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_TYPE_CASE);
	begin_node(parser, NODE_TYPE_TYPE_CASE);
		parse_token(parser, TOKEN_TYPE_IDENTIFIER);
		if (peek_token(parser, TOKEN_TYPE_ASSIGN) && !parse_assignment_body(parser)) return false;
		if (!parse_token(parser, TOKEN_TYPE_SEMICOLON)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_SEMICOLON);
	return end_node(parser);
}

static bool parse_field_definition(Parser *parser) {
	if (peek_token(parser, TOKEN_TYPE_EMBED)) return parse_embed_statement(parser);
	if (!(peek_token(parser, TOKEN_TYPE_IDENTIFIER) || peek_token(parser, TOKEN_TYPE_PUB))) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_FIELD_DEFINITION);
	begin_node(parser, NODE_TYPE_FIELD_DEFINITION);
		parse_token(parser, TOKEN_TYPE_PUB);
		if (!parse_token(parser, TOKEN_TYPE_IDENTIFIER)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_IDENTIFIER);
		if (!parse_type(parser)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_TYPE);
		if (!parse_token(parser, TOKEN_TYPE_SEMICOLON)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_SEMICOLON);
	return end_node(parser);
}

static bool parse_trait_definition(Parser *parser) {
	if (!peek_token(parser, TOKEN_TYPE_TRAIT)) return false;
	begin_node(parser, NODE_TYPE_TRAIT_DEFINITION);
		parse_token(parser, TOKEN_TYPE_TRAIT);
		if (!parse_token(parser, TOKEN_TYPE_IDENTIFIER)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_IDENTIFIER);
		// Parse generic parameters...
		
		// Parse fields.
		if (!parse_token(parser, TOKEN_TYPE_LEFT_BRACE)) {
			if (!parse_token(parser, TOKEN_TYPE_SEMICOLON)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_SEMICOLON);
			return end_node(parser);
		}
		while (!peek_token(parser, TOKEN_TYPE_RIGHT_BRACE)) {
			if (!parse_field_definition(parser)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_FIELD_DEFINITION);
		}
		if (!parse_token(parser, TOKEN_TYPE_RIGHT_BRACE)) return emit_error(parser, PARSER_ERROR_TYPE_UNCLOSED_BRACE);

		// Parse cases.
		if (!parse_token(parser, TOKEN_TYPE_CASES)) return end_node(parser);
		if (!parse_token(parser, TOKEN_TYPE_LEFT_BRACE)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_CASES);
		while (!peek_token(parser, TOKEN_TYPE_RIGHT_BRACE)) {
			if (!parse_type_case(parser)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_TYPE_CASE);
		}
		if (!parse_token(parser, TOKEN_TYPE_RIGHT_BRACE)) return emit_error(parser, PARSER_ERROR_TYPE_UNCLOSED_BRACE);
	return end_node(parser);
}

static bool parse_struct_definition(Parser *parser) {
	if (!peek_token(parser, TOKEN_TYPE_STRUCT)) return false;
	begin_node(parser, NODE_TYPE_STRUCT_DEFINITION);
		parse_token(parser, TOKEN_TYPE_STRUCT);
		if (!parse_token(parser, TOKEN_TYPE_IDENTIFIER)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_IDENTIFIER);
		// Parse generic parameters...
		
		// Parse fields.
		if (!parse_token(parser, TOKEN_TYPE_LEFT_BRACE)) {
			if (!parse_token(parser, TOKEN_TYPE_SEMICOLON)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_SEMICOLON);
			return end_node(parser);
		}
		while (!peek_token(parser, TOKEN_TYPE_RIGHT_BRACE)) {
			if (!parse_field_definition(parser)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_FIELD_DEFINITION);
		}
		if (!parse_token(parser, TOKEN_TYPE_RIGHT_BRACE)) return emit_error(parser, PARSER_ERROR_TYPE_UNCLOSED_BRACE);

		// Parse cases.
		if (!parse_token(parser, TOKEN_TYPE_CASES)) return end_node(parser);
		if (!parse_token(parser, TOKEN_TYPE_LEFT_BRACE)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_CASES);
		while (!peek_token(parser, TOKEN_TYPE_RIGHT_BRACE)) {
			if (!parse_type_case(parser)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_TYPE_CASE);
		}
		if (!parse_token(parser, TOKEN_TYPE_RIGHT_BRACE)) return emit_error(parser, PARSER_ERROR_TYPE_UNCLOSED_BRACE);
	return end_node(parser);
}

static bool parse_definition(Parser *parser);

static bool parse_block(Parser *parser);

static bool parse_if_statement(Parser *parser) {
	begin_node(parser, NODE_TYPE_IF_STATEMENT);
		parse_token(parser, TOKEN_TYPE_IF);
		if (!parse_expression(parser)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_EXPRESSION);
		if (!parse_block(parser)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_BLOCK);
		while (parse_token(parser, TOKEN_TYPE_ELSE)) {
			bool encountered_if = false;
			if (parse_token(parser, TOKEN_TYPE_IF)) {
				if (!parse_expression(parser)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_EXPRESSION);
				encountered_if = true;
			}
			if (!parse_block(parser)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_BLOCK);
			if (!encountered_if) break;
		}
	return end_node(parser);
}

static bool parse_loop_variable(Parser *parser) {
	begin_node(parser, NODE_TYPE_LOOP_VARIABLE);
		if (!parse_token(parser, TOKEN_TYPE_IDENTIFIER)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_IDENTIFIER);
		if (!parse_type(parser)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_TYPE);
	return end_node(parser);
}

static bool parse_for_loop(Parser *parser) {
	begin_node(parser, NODE_TYPE_FOR_LOOP);
		parse_token(parser, TOKEN_TYPE_FOR);
		// TODO: Make this parse either one variable without parenthesis or a tuple of variables in parenthesis like function parameters.
		while (!peek_token(parser, TOKEN_TYPE_IN)) {
			if (!parse_loop_variable(parser)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_LOOP_VARIABLE);
			parse_token(parser, TOKEN_TYPE_COMMA);
		}
		parse_token(parser, TOKEN_TYPE_IN);
		if (!parse_expression(parser)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_EXPRESSION);
		if (!parse_block(parser)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_BLOCK);
	return end_node(parser);
}

static bool parse_while_loop(Parser *parser) {
	begin_node(parser, NODE_TYPE_WHILE_LOOP);
		parse_token(parser, TOKEN_TYPE_WHILE);
		if (!parse_expression(parser)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_EXPRESSION);
		if (!parse_block(parser)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_BLOCK);
	return end_node(parser);
}

static bool parse_block_statement(Parser *parser) {
	if (parse_definition(parser)) return true;
	if (peek_token(parser, TOKEN_TYPE_LEFT_BRACE)) return parse_block(parser);
	if (peek_token(parser, TOKEN_TYPE_WHILE)) return parse_while_loop(parser);
	if (peek_token(parser, TOKEN_TYPE_FOR)) return parse_for_loop(parser);
	if (peek_token(parser, TOKEN_TYPE_IF)) return parse_if_statement(parser);
	if (parse_expression(parser)) {
		if (!parse_token(parser, TOKEN_TYPE_SEMICOLON)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_SEMICOLON);
		return true;
	}
	return false;
}

static bool parse_block(Parser *parser) {
	if (!peek_token(parser, TOKEN_TYPE_LEFT_BRACE)) return false;
	begin_node(parser, NODE_TYPE_BLOCK);
		parse_token(parser, TOKEN_TYPE_LEFT_BRACE);
		while (!peek_token(parser, TOKEN_TYPE_RIGHT_BRACE)) {
			if (!parse_block_statement(parser)) break;
		}
		if (!parse_token(parser, TOKEN_TYPE_RIGHT_BRACE)) return emit_error(parser, PARSER_ERROR_TYPE_UNCLOSED_BRACE);
	return end_node(parser);
}

static bool parse_function_parameter(Parser *parser) {
	if (!peek_token(parser, TOKEN_TYPE_IDENTIFIER)) return false;
	begin_node(parser, NODE_TYPE_FUNCTION_PARAMETER);
		parse_token(parser, TOKEN_TYPE_IDENTIFIER);
		if (!parse_type(parser)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_TYPE);
	return end_node(parser);
}

static bool parse_function_parameters(Parser *parser) {
	if (!peek_token(parser, TOKEN_TYPE_LEFT_PARENTHESIS)) return false;
	begin_node(parser, NODE_TYPE_FUNCTION_PARAMETERS);
		parse_token(parser, TOKEN_TYPE_LEFT_PARENTHESIS);
		while (parse_function_parameter(parser)) {
			if (!parse_token(parser, TOKEN_TYPE_COMMA)) break;
		}
		if (!parse_token(parser, TOKEN_TYPE_RIGHT_PARENTHESIS)) return emit_error(parser, PARSER_ERROR_TYPE_UNCLOSED_PARENTHESIS);
	return end_node(parser);
}

static bool parse_method_definition(Parser *parser) {
	if (!peek_token(parser, TOKEN_TYPE_METHOD)) return false;
	begin_node(parser, NODE_TYPE_METHOD_DEFINITION);
		parse_token(parser, TOKEN_TYPE_METHOD);
		if (!parse_token(parser, TOKEN_TYPE_IDENTIFIER)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_IDENTIFIER);
		if (!parse_function_parameters(parser)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_FUNCTION_PARAMETERS);
		if (!parse_type(parser)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_TYPE);
		if (!parse_block(parser) && !parse_token(parser, TOKEN_TYPE_SEMICOLON)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_SEMICOLON);
	return end_node(parser);
}

static bool parse_function_definition(Parser *parser) {
	if (!peek_token(parser, TOKEN_TYPE_FUNC)) return false;
	begin_node(parser, NODE_TYPE_FUNCTION_DEFINITION);
		parse_token(parser, TOKEN_TYPE_FUNC);
		if (!parse_token(parser, TOKEN_TYPE_IDENTIFIER)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_IDENTIFIER);
		if (!parse_function_parameters(parser)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_FUNCTION_PARAMETERS);
		if (!parse_type(parser)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_TYPE);
		if (!parse_block(parser)) return emit_error(parser, PARSER_ERROR_TYPE_EXPECTED_BLOCK);
	return end_node(parser);
}
